# robotpy-ADI

./: .gitignore  LICENSE  Notes.txt  README.md  README.rst  pyproject.toml
adis16470/: __init__.py
adis16740/: __init__.py
docs/: api.rst  conf.py  gensidebar.py  index.rst
tests/: run_tests.sh  test_adi.py
