[build-system]
requires = [
    "robotpy-build>=2020.0.17,<2021.0.0",
    "wpilib>=2020.1.2.2,<2021.0.0",
]

[tool.robotpy-build]
base_package = "adis16740"

# Downloads Section - Maven Lib 
[tool.robotpy-build.wrappers."adis16740".maven_lib_download]
artifact_id = "adis16470-cpp"
group_id = "com.github.juchong"
repo_url = "http://maven.highcurrent.io/maven"
version = "2020.r1"
use_sources = true
sources = ["adis16740/src/cpp/ADIS16470_IMU.cpp"]
sources_classifier: str = "source"
# sources = ["ADIS16740-RoboRIO-Driver/c++/src/main/cpp/ADIS16740_IMU.cpp"]


# This is the name of the library contained in the download
# libs = ["ADIS16470_IMU"]

# Wrapper section for Library - use 'python setup.py build_dl', to download your library
[tool.robotpy-build.wrappers."adis16740"]
name = "adis16740"
extra_includes = ["adis16740/src/include/adi"]
#sources = ["adis16740/src/cpp/ADIS16470_IMU.cpp"]
source = ["adis16740/src/cpp/ADIS16470_IMU.cpp"]
depends = ["wpilibc", "wpilib_core", "wpiHal"]
generate = [
    # adi
    { ADIS16470_IMU = "adi/ADIS16470_IMU.h" },
]
generation_data = "gen"

# Run 'python -m robotpy_build scan-headers', to get output to put in generate
# Run 'python -m robotpy_build create-gen --write', to scan your defined generate items 
#   and output yaml for them in the directory defined by generation_data

[tool.robotpy-build.metadata]
name = "robotpy-ADI"
description = "Python Driver Wrapper for ADI ADIS16740 IMU sensor"
author = "RobotPy Development Team"
author_email = "robotpy@googlegroups.com"
url = "https://github.com/robotpy/robotpy-adi"
license = "BSD-3-Clause"
install_requires = [
    "wpilib>=2020.1.2.2,<2021.0.0",
]

# robotpy-build create-imports adi adis16470._adis16740
# To build run python setup.py develop
# install clcache: https://github.com/frerich/clcache
# pip install clcache

# install ccache
# define variables
# export RPYBUILD_PARALLEL=1
# export CC="ccache gcc"
# export CXX="ccache g++"
# export GCC_COLORS=1

# http://www.maven.highcurrent.io/maven/com/github/juchong/adis16470-cpp/2020.r1/adis16470-cpp-2020.r1-source.zip

#..\..\..\Pythons\frc2020\Scripts\activate.ps1
# C:/Users/seth.urbach/Documents/Pythons/frc2020/Scripts/activate.ps1

