[build-system]
requires = [
    "robotpy-build>=2020.0.27,<2021.0.0",
    "wpilib>=2020.2.2.0,<2021.0.0",
]

[tool.robotpy-build]
base_package = "adis16470"

# Downloads Section - Maven Lib 
[tool.robotpy-build.wrappers."adis16470".maven_lib_download]
artifact_id = "adis16470-cpp"
group_id = "com.github.juchong"
repo_url = "http://maven.highcurrent.io/maven"
version = "2020.r1"
use_sources = true
sources_classifier = "source"
sources = [
    "ADIS16470_IMU.cpp"
]

[tool.robotpy-build.wrappers."adis16470"]
name = "adis16470"
depends = ["wpilibc", "wpilib_core", "wpilibc_interfaces", "wpiHal", "ntcore"]
sources = [
    "adis16470/src/rpy/adis16470.cpp"
]
pp_defines = ["_USE_MATH_DEFINES 1"]

generate = [
    { ADIS16470_IMU = "adi/ADIS16470_IMU.h" },
]
generation_data = "gen"


# Run 'python -m robotpy_build scan-headers', to get output to put in generate
# Run 'python -m robotpy_build create-gen --write', to scan your defined generate items 
#   and output yaml for them in the directory defined by generation_data

[tool.robotpy-build.metadata]
name = "robotpy-adis16470"
description = "Python Driver Wrapper for ADI ADIS16470 IMU sensor"
author = "RobotPy Development Team"
author_email = "robotpy@googlegroups.com"
url = "https://github.com/robotpy/robotpy-adis16470"
license = "BSD-3-Clause"
install_requires = [
    "wpilib>=2020.2.2.0,<2021.0.0",
]

# robotpy-build create-imports adi adis16470._adis16470
# To build run python setup.py develop
# install clcache: https://github.com/frerich/clcache
# pip install clcache

# install ccache
# define variables
# export RPYBUILD_PARALLEL=1
# export CC="ccache gcc"
# export CXX="ccache g++"
# export GCC_COLORS=1

# http://www.maven.highcurrent.io/maven/com/github/juchong/adis16470-cpp/2020.r1/adis16470-cpp-2020.r1-source.zip

#..\..\..\Pythons\frc2020\Scripts\activate.ps1
# C:/Users/seth.urbach/Documents/Pythons/frc2020/Scripts/activate.ps1

